iptables.up.server.rules
# Generated by iptables-save v1.4.14 on Mon Nov 17 18:45:27 2014
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:LOGGING - [0:0]
# Web server and ssh server
-A INPUT -i eth0 -p tcp -m multiport --dports 22,443,80 -m state --state NEW,ESTABLISHED -j ACCEPT
# Allow already established tcp & udp connections
-A INPUT -i eth0 -p tcp -m tcp -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p udp -m udp -m state --state ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m limit --limit 50/min --limit-burst 100 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -m limit --limit 50/min --limit-burst 100 -j ACCEPT
-A INPUT -j LOGGING
-A LOGGING -m limit --limit 2/min -j LOG --log-prefix "IPTables Packet Dropped: " --log-level 7
-A LOGGING -j DROP
COMMIT
# Completed on Mon Nov 17 18:45:27 2014
